--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "pm2:dev": "pm2 start index.js --name caramelo-mail-dev --watch",
+    "pm2:prod": "pm2 start index.js --name caramelo-mail --watch -i max",
+    "pm2:stop": "pm2 stop caramelo-mail",
+    "pm2:restart": "pm2 restart caramelo-mail",
+    "pm2:logs": "pm2 logs caramelo-mail"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
@@ -15,6 +20,7 @@
     "nodemailer": "^6.9.9"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "pm2": "^5.3.1"
   }
 }
